[gd_scene load_steps=5 format=3 uid="uid://dhjsytj4k6w8f"]

[ext_resource type="Script" path="res://ThrowArea.gd" id="1_gbfl0"]
[ext_resource type="PackedScene" uid="uid://d4bqc4nkpel1f" path="res://doll_projectile.tscn" id="2_ywm1i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0dh1d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d6a6i"]

[node name="ThrowArea" type="Node2D"]
script = ExtResource("1_gbfl0")

[node name="DollProjectile-debug" parent="." instance=ExtResource("2_ywm1i")]
visible = false
position = Vector2(417, -208)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ThrowIndicator" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(0.290196, 0.74902, 0.933333, 1)

[node name="InitialClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InitialClickArea"]
scale = Vector2(4.075, 4.075)
shape = SubResource("CircleShape2D_0dh1d")
debug_color = Color(0.34902, 0.560784, 0.709804, 0.345098)

[node name="DragArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragArea"]
scale = Vector2(32.385, 32.385)
shape = SubResource("CircleShape2D_d6a6i")

[connection signal="input_event" from="InitialClickArea" to="." method="_on_initial_click_area_input_event"]
[connection signal="input_event" from="DragArea" to="." method="_on_drag_area_input_event"]
